# the-tradr-ai-bot-V4-Backup-Correct

./: .gitignore  .replit  backtest.py  backtest_engine.py  challenge_analysis.py  challenge_rules.py  config.py  data.py  data_loader.py  discord_output.py  formatting.py  live_bot.py  main.py  mt5_bridge_server.py  mt5_validator.py  optimizer.py  pyproject.toml  replit.md  report.py  requirements.txt  settings.py  strategy.py  strategy_analysis.md  strategy_core.py  strategy_spec_v4.md  test_improvements.py  trade_state.json  trade_state.py
attached_assets/: Pasted-Act-as-a-senior-Python-backend-engineer-Discord-bot-specialist-and-systematic-trading-quant-You--1764198431223_1764198431224.txt  Pasted-Here-s-a-clean-copy-pasteable-Replit-Bolt-prompt-you-ca_1764678890831.txt  Pasted-Microsoft-Windows-Version-10-0-14393-c-2016-Microsoft-C_1764769559628.txt  Pasted-Nice-below-is-a-copy-paste-ready-Replit-Assistant-promp_1764761169216.txt  Pasted-You-are-an-AI-developer-working-inside-an-existing-Repl_1764706822423.txt  Pasted-You-are-my-Replit-assistant-I-want-to-run-a-small-live-_1764761212900.txt  Pasted-You-are-my-Replit-assistant-I-want-to-run-a-small-live-_1764761239229.txt  Pasted-Your-GitHub-repo-for-this-bot-has-core-files-like-main-py-strategy-py-backtest-py-data-py--1764184330404_1764184330405.txt  Pasted-ou-are-an-AI-developer-working-inside-an-existing-Repli_1764706909194.txt  Strategy_spec_1764180586556.md
src/: __init__.py
src/backtest/: __init__.py  engine.py
src/data/: __init__.py  historical_downloader.py
src/discord/: __init__.py
(+2 files in other folders)
